--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
             </p>
             <a href="https://anoopshivadas.github.io/Weather/" target="_blank">View Project</a>
           </div>
+          <div class="project-card">
+            <h3>Vertical Slider WebPage</h3>
+            <p>A smooth and interactive vertical image slider built using HTML, CSS, and JavaScript. 
+              This slider is ideal for showcasing products, portfolios, or themed content with full-page visuals and accompanying text.
+            </p>
+            <a href="https://anoopshivadas.github.io/Weather/" target="_blank">View Project</a>
+          </div>
         </div>
       </div>
     </section>
