--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p>A smooth and interactive vertical image slider built using HTML, CSS, and JavaScript. 
               This slider is ideal for showcasing products, portfolios, or themed content with full-page visuals and accompanying text.
             </p>
-            <a href="https://anoopshivadas.github.io/Weather/" target="_blank">View Project</a>
+            <a href="https://anoopshivadas.github.io/Vertical_Slider/" target="_blank">View Project</a>
           </div>
         </div>
       </div>
